Mon Nov  3 09:53:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-all.h:
          Include OS_NS_errno.h to get ENOTSUP

        * ace/config-win32-borland.h:
          CB lacks isblank/iswblank/icctype/iswctype

        * ace/config-win32-msvc.h:
        * ace/config-WinCE.h
          Lacks isblank/iswblank

        * ace/os_include/os_ctype.h:
          Added typedef for ctype_t

        * ace/OS_NS_ctype.h:
        * ace/OS_NS_ctype.inl:
          Added isblank/isascii/isctype/iswctype wrappers

        * ace/OS_NS_time.h:
          No need to include OS_NS_errno.h here

        * bin/fuzz.pl:
          Added isblank/isascii/isctype/iswctype to ACE_OS check

        * tests/OS_Test.cpp:
          Extended ctype tests

Thu Oct 30 13:25:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OS_Test.cpp:
          Added a test for ace_isprint with a tab character. WinCE 6 and
          earlier do have a bug that for tab they return true instead of
          false

        * ace/OS_NS_sys_utsname.cpp:
          Initialise pointer with 0

        * ace/OS_NS_ctype.inl (ace_isprint):
          If we have WinCE 6 or earlier and get called for tab (0x9) then
          return 0, WinCE stdlib has a bug that 1 is returned for tab.
          This was found when investigating some TAO logs where we do
          a hexdump of the received packets

Thu Oct 30 12:53:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/Send_Recv_Tests/client.cpp
        * protocols/tests/HTBP/Send_Recv_Tests/server.cpp
          Use %C to log ascii strings instead of using %s with
          ACE_TEXT_CHAR_TO_TCHAR

Thu Oct 30 12:16:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ARGV_Test.cpp
        * tests/Bound_Ptr_Test.cpp
        * tests/Enum_Interfaces_Test.cpp
        * tests/IOStream_Test.cpp
        * tests/Sendfile_Test.cpp
        * tests/SOCK_Send_Recv_Test.cpp